--- a/build.gradle
+++ b/build.gradle
@@ -4,35 +4,39 @@ plugins {
     id 'org.jetbrains.kotlin.plugin.spring' version '1.3.21'
 }
 
+
+// Apply the java-library plugin to add support for Java Library
+apply plugin: 'java-library'
 apply plugin: 'io.spring.dependency-management'
 
-group = 'org.telegram.bot'
-version = '0.0.1-SNAPSHOT'
-sourceCompatibility = '11'
-
 repositories {
-    mavenCentral()
+    jcenter()
 }
 
 dependencies {
-    implementation 'org.springframework.boot:spring-boot-starter-web'
-    implementation 'com.fasterxml.jackson.module:jackson-module-kotlin'
+    implementation 'org.telegram:telegrambots:3.6.1'
+    implementation 'com.google.guava:guava:27.0.1-jre'
+    implementation 'org.apache.commons:commons-collections4:4.3'
+    
+    compile("org.springframework.boot:spring-boot-starter-web")
+    implementation 'org.springframework.boot:spring-boot-starter'
     implementation 'org.jetbrains.kotlin:kotlin-reflect'
     implementation 'org.jetbrains.kotlin:kotlin-stdlib-jdk8'
-    implementation 'com.google.guava:guava:27.0.1-jre'
+
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+
 }
 
 compileKotlin {
     kotlinOptions {
         freeCompilerArgs = ['-Xjsr305=strict']
-        jvmTarget = '11'
+        jvmTarget = '1.8'
     }
 }
 
 compileTestKotlin {
     kotlinOptions {
         freeCompilerArgs = ['-Xjsr305=strict']
-        jvmTarget = '11'
+        jvmTarget = '1.8'
     }
 }
