--- a/build.gradle
+++ b/build.gradle
@@ -29,6 +29,7 @@ dependencies {
     testCompile "org.junit.jupiter:junit-jupiter-api:5.2.0"
     testCompile "org.junit.jupiter:junit-jupiter-params:5.2.0"
     testRuntime "org.junit.jupiter:junit-jupiter-engine:5.2.0"
+    testCompile "org.hamcrest:hamcrest-all:1.3"
 }
 
 compileKotlin {
