--- a/build.gradle
+++ b/build.gradle
@@ -1,35 +1,38 @@
 plugins {
-    id 'org.springframework.boot' version '2.1.3.RELEASE'
+    id 'org.springframework.boot' version '2.1.4.RELEASE'
     id 'org.jetbrains.kotlin.jvm' version '1.3.21'
+    id 'org.jetbrains.kotlin.plugin.jpa' version '1.3.21'
     id 'org.jetbrains.kotlin.plugin.spring' version '1.3.21'
 }
 
-
-// Apply the java-library plugin to add support for Java Library
-apply plugin: 'java-library'
 apply plugin: 'io.spring.dependency-management'
 
+sourceCompatibility = '1.8'
+
 repositories {
-    jcenter()
+    mavenCentral()
 }
 
-
 dependencies {
-    implementation 'org.telegram:telegrambots:3.6.1'
-    implementation 'com.google.guava:guava:27.0.1-jre'
-    implementation 'org.apache.commons:commons-collections4:4.3'
-    
-    compile("org.springframework.boot:spring-boot-starter-web")
-    implementation 'org.springframework.boot:spring-boot-starter'
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+    implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'com.fasterxml.jackson.module:jackson-module-kotlin'
     implementation 'org.jetbrains.kotlin:kotlin-reflect'
     implementation 'org.jetbrains.kotlin:kotlin-stdlib-jdk8'
 
-    testCompile 'org.mockito:mockito-core:2.25.1'
-    testCompile 'org.mockito:mockito-junit-jupiter:2.25.1'
-    testCompile "org.junit.jupiter:junit-jupiter-api:5.2.0"
-    testCompile "org.junit.jupiter:junit-jupiter-params:5.2.0"
-    testRuntime "org.junit.jupiter:junit-jupiter-engine:5.2.0"
-    testCompile "org.hamcrest:hamcrest-all:1.3"
+    implementation 'org.telegram:telegrambots:4.1.2'
+    implementation 'com.google.guava:guava:27.0.1-jre'
+    implementation 'org.apache.commons:commons-collections4:4.3'
+
+    runtimeOnly 'com.h2database:h2'
+    runtimeOnly 'org.postgresql:postgresql'
+
+    testImplementation 'org.hamcrest:hamcrest-all:1.3'
+    testImplementation 'org.mockito:mockito-core:2.25.1'
+    testImplementation 'org.mockito:mockito-junit-jupiter:2.25.1'
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.2.0'
+    testImplementation 'org.junit.jupiter:junit-jupiter-params:5.2.0'
+    testRuntime 'org.junit.jupiter:junit-jupiter-engine:5.2.0'
 }
 
 compileKotlin {
